# demo-rust-rocket

./: .env.example  .env.public  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml
.cargo/: .gitignore  config  config.example
databases/: demo_rust_rocket.sqlite
db/migrations/00000000000000_diesel_initial_setup/: up.sql
db/migrations/10000000000000_create_items/: down.sql  up.sql
db/setups/0000000000000000_create_database/: down.sql  up.sql
db/setups/0000000000000001_create_roles/: down.sql  up.sql
db/setups/0000000000000002_create_privileges/: down.sql  up.sql
doc/: rust.md  target.md
doc/cookies-and-cookie-jar/: index.md
doc/databases/: index.md
doc/install-diesel-cli/: index.md
doc/install-sccache/: index.md
doc/json/: index.md
doc/openssl/: index.md
doc/rocket-toml-configuration-file/: index.md
doc/rust/: index.md
doc/static-file/: index.md
doc/static-file-server/: index.md
doc/static-files-with-path-segments/: index.md
doc/templates/: index.md
src/: main.rs  models.rs  schema.rs  tests.rs
src/demos/: cookies.rs  database.rs  databases.rs  dynamic_route.rs  form.rs  form_with_from_form_value.rs  form_with_lenient_form.rs  form_with_validation.rs  index.rs  json.rs  method_route.rs  method_routes.rs  mod.rs  pages.rs  static_file.rs  static_files.rs  static_files_with_a_file_server.rs  static_files_with_path_segments.rs  static_route.rs  templates.rs  upload.rs
src/tests/: cookies.rs  dynamic_route.rs  files.rs  form.rs  form_with_lenient_form.rs  form_with_validation.rs  hello.rs  json.rs  mod.rs  pages.rs  static_route.rs  templates.rs  upload.rs
www/pages/: demo.html
www/static-file/: demo.html
www/static-files-with-a-file-server/: demo1.txt  demo2.txt
www/static-files-with-path-segments/: demo1.html  demo2.html
www/templates/: base.html.tera  hello.html.tera
